# ece_4122

./: CMakeLists.txt  README.md
include/: branch_record.h  metrics.h
src/: baseline.cpp  baseline.h  main.cu  predictors.cu  predictors.cuh  trace_reader.cpp  trace_reader.h  transfer.cu  transfer.cuh  validator.cpp  validator.h
traces/: generate_trace.py
